--- a/Projects/project1_colorSwitcher/style.css
+++ b/Projects/project1_colorSwitcher/style.css
@@ -6,19 +6,32 @@
     height: 100px;
     width: 100px;
     background-color: gray;
+    margin: 15px;
+    border: 5px solid black;
 }
 #red{
     height: 100px;
     width: 100px;
     background-color: red;
+    margin: 15px;
+    border: 5px solid black;
 }
 #pink{
     height: 100px;
     width: 100px;
     background-color: pink;
+    margin: 15px;
+    border: 5px solid black;
 }
-#gray{
+#blue{
     height: 100px;
     width: 100px;
     background-color: blue;
+    margin: 15px;
+    border: 5px solid black;
+}
+.canvas{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
